{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 294,
  "lineage": "0a6feb3b-640d-b73f-21ef-c6a8e077e578",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0e08880854e4271ce",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-54-179-243-229.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.179.243.229",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "uat",
              "Name": "uat-demo-eks-cluster-natgw-eip",
              "Owner": "Shubho Shaha",
              "Project": "demo-eks-cluster",
              "ResourceType": "EIP"
            },
            "tags_all": {
              "Environment": "uat",
              "Name": "uat-demo-eks-cluster-natgw-eip",
              "Owner": "Shubho Shaha",
              "Project": "demo-eks-cluster",
              "ResourceType": "EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:354285753755:internet-gateway/igw-0f650726fca501cf1",
            "id": "igw-0f650726fca501cf1",
            "owner_id": "354285753755",
            "tags": {
              "Environment": "uat",
              "Name": "uat-demo-eks-cluster-igw",
              "Owner": "Shubho Shaha",
              "Project": "demo-eks-cluster",
              "ResourceType": "IGW"
            },
            "tags_all": {
              "Environment": "uat",
              "Name": "uat-demo-eks-cluster-igw",
              "Owner": "Shubho Shaha",
              "Project": "demo-eks-cluster",
              "ResourceType": "IGW"
            },
            "vpc_id": "vpc-0ba274f5229f1b39b"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e08880854e4271ce",
            "connectivity_type": "public",
            "id": "nat-01bd32921867af71b",
            "network_interface_id": "eni-0010a1e47b698c151",
            "private_ip": "10.145.0.172",
            "public_ip": "54.179.243.229",
            "subnet_id": "subnet-0e999233c48a25ad8",
            "tags": {
              "Environment": "uat",
              "Name": "uat-demo-eks-cluster-natgw",
              "Owner": "Shubho Shaha",
              "Project": "demo-eks-cluster",
              "ResourceType": "NATGW"
            },
            "tags_all": {
              "Environment": "uat",
              "Name": "uat-demo-eks-cluster-natgw",
              "Owner": "Shubho Shaha",
              "Project": "demo-eks-cluster",
              "ResourceType": "NATGW"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.public-subnet-1a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public-route-table-igw-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f650726fca501cf1",
            "id": "r-rtb-0dd900ea68ba205941080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dd900ea68ba20594",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-route-table",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route-with-ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-063937346e5f681f41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01bd32921867af71b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-063937346e5f681f4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.natgw",
            "aws_route_table.private-route-table",
            "aws_subnet.public-subnet-1a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:354285753755:route-table/rtb-063937346e5f681f4",
            "id": "rtb-063937346e5f681f4",
            "owner_id": "354285753755",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "uat",
              "Name": "uat-demo-eks-cluster-private-route-table",
              "Owner": "Shubho Shaha",
              "Project": "demo-eks-cluster",
              "ResourceType": "PrivateRouteTable"
            },
            "tags_all": {
              "Environment": "uat",
              "Name": "uat-demo-eks-cluster-private-route-table",
              "Owner": "Shubho Shaha",
              "Project": "demo-eks-cluster",
              "ResourceType": "PrivateRouteTable"
            },
            "vpc_id": "vpc-0ba274f5229f1b39b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:354285753755:route-table/rtb-0dd900ea68ba20594",
            "id": "rtb-0dd900ea68ba20594",
            "owner_id": "354285753755",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "uat",
              "Name": "uat-demo-eks-cluster-public-route-table",
              "Owner": "Shubho Shaha",
              "Project": "demo-eks-cluster",
              "ResourceType": "PublicRouteTable"
            },
            "tags_all": {
              "Environment": "uat",
              "Name": "uat-demo-eks-cluster-public-route-table",
              "Owner": "Shubho Shaha",
              "Project": "demo-eks-cluster",
              "ResourceType": "PublicRouteTable"
            },
            "vpc_id": "vpc-0ba274f5229f1b39b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee6fe3bbdf2e6d67",
            "route_table_id": "rtb-063937346e5f681f4",
            "subnet_id": "subnet-04117996000be005e"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.private-subnet-1a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085710803d4e23aab",
            "route_table_id": "rtb-063937346e5f681f4",
            "subnet_id": "subnet-001d6d408205368d7"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.private-subnet-1b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02002ec3139972467",
            "route_table_id": "rtb-063937346e5f681f4",
            "subnet_id": "subnet-0e64105db0fd5d2d2"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.private-subnet-1c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09079c0638a69b806",
            "route_table_id": "rtb-0dd900ea68ba20594",
            "subnet_id": "subnet-0e999233c48a25ad8"
          },
          "dependencies": [
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-1a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0110006b6abb468",
            "route_table_id": "rtb-0dd900ea68ba20594",
            "subnet_id": "subnet-082824706ac7f2477"
          },
          "dependencies": [
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-1b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9ff07e2af5d627c",
            "route_table_id": "rtb-0dd900ea68ba20594",
            "subnet_id": "subnet-094946741c2c079a9"
          },
          "dependencies": [
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-1c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks-cluster-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:354285753755:security-group/sg-08cb3a0b6bfd586c9",
            "description": "Security Group For EKS Cluster Mangemen",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08cb3a0b6bfd586c9",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.145.4.0/24",
                  "10.145.5.0/24",
                  "10.145.6.0/24"
                ],
                "description": "Allow pods to communicate with the cluster API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "uat-demo-eks-cluster-eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "354285753755",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "uat",
              "Name": "uat-demo-eks-cluster-eks-cluster-sg",
              "Owner": "Shubho Shaha",
              "Project": "demo-eks-cluster",
              "ResourceType": "SECURITYGROUP"
            },
            "tags_all": {
              "Environment": "uat",
              "Name": "uat-demo-eks-cluster-eks-cluster-sg",
              "Owner": "Shubho Shaha",
              "Project": "demo-eks-cluster",
              "ResourceType": "SECURITYGROUP"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba274f5229f1b39b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private-subnet-1a",
            "aws_subnet.private-subnet-1b",
            "aws_subnet.private-subnet-1c",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks-worker-node-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:354285753755:security-group/sg-09d0b6ba6f5bfab1a",
            "description": "EKS worker node security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09d0b6ba6f5bfab1a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "uat-demo-eks-cluster-eks-worker-node-sg",
            "name_prefix": "",
            "owner_id": "354285753755",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "uat",
              "Name": "uat-demo-eks-cluster-eks-worker-node-sg",
              "Owner": "Shubho Shaha",
              "Project": "demo-eks-cluster",
              "ResourceType": "SECURITYGROUP"
            },
            "tags_all": {
              "Environment": "uat",
              "Name": "uat-demo-eks-cluster-eks-worker-node-sg",
              "Owner": "Shubho Shaha",
              "Project": "demo-eks-cluster",
              "ResourceType": "SECURITYGROUP"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba274f5229f1b39b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:354285753755:subnet/subnet-04117996000be005e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.145.4.0/24",
            "id": "subnet-04117996000be005e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "354285753755",
            "tags": {
              "Environment": "uat",
              "Name": "uat-demo-eks-cluster-private-subnet-1a",
              "Owner": "Shubho Shaha",
              "Project": "demo-eks-cluster",
              "ResourceType": "SUBNET"
            },
            "tags_all": {
              "Environment": "uat",
              "Name": "uat-demo-eks-cluster-private-subnet-1a",
              "Owner": "Shubho Shaha",
              "Project": "demo-eks-cluster",
              "ResourceType": "SUBNET"
            },
            "vpc_id": "vpc-0ba274f5229f1b39b"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:354285753755:subnet/subnet-001d6d408205368d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.145.5.0/24",
            "id": "subnet-001d6d408205368d7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "354285753755",
            "tags": {
              "Environment": "uat",
              "Name": "uat-demo-eks-cluster-private-subnet-1b",
              "Owner": "Shubho Shaha",
              "Project": "demo-eks-cluster",
              "ResourceType": "SUBNET"
            },
            "tags_all": {
              "Environment": "uat",
              "Name": "uat-demo-eks-cluster-private-subnet-1b",
              "Owner": "Shubho Shaha",
              "Project": "demo-eks-cluster",
              "ResourceType": "SUBNET"
            },
            "vpc_id": "vpc-0ba274f5229f1b39b"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:354285753755:subnet/subnet-0e64105db0fd5d2d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.145.6.0/24",
            "id": "subnet-0e64105db0fd5d2d2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "354285753755",
            "tags": {
              "Environment": "uat",
              "Name": "uat-demo-eks-cluster-private-subnet-1c",
              "Owner": "Shubho Shaha",
              "Project": "demo-eks-cluster",
              "ResourceType": "SUBNET"
            },
            "tags_all": {
              "Environment": "uat",
              "Name": "uat-demo-eks-cluster-private-subnet-1c",
              "Owner": "Shubho Shaha",
              "Project": "demo-eks-cluster",
              "ResourceType": "SUBNET"
            },
            "vpc_id": "vpc-0ba274f5229f1b39b"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:354285753755:subnet/subnet-0e999233c48a25ad8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.145.0.0/24",
            "id": "subnet-0e999233c48a25ad8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "354285753755",
            "tags": {
              "Environment": "uat",
              "Name": "uat-demo-eks-cluster-public-subnet-1a",
              "Owner": "Shubho Shaha",
              "Project": "demo-eks-cluster",
              "ResourceType": "SUBNET"
            },
            "tags_all": {
              "Environment": "uat",
              "Name": "uat-demo-eks-cluster-public-subnet-1a",
              "Owner": "Shubho Shaha",
              "Project": "demo-eks-cluster",
              "ResourceType": "SUBNET"
            },
            "vpc_id": "vpc-0ba274f5229f1b39b"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:354285753755:subnet/subnet-082824706ac7f2477",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.145.1.0/24",
            "id": "subnet-082824706ac7f2477",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "354285753755",
            "tags": {
              "Environment": "uat",
              "Name": "uat-demo-eks-cluster-public-subnet-1b",
              "Owner": "Shubho Shaha",
              "Project": "demo-eks-cluster",
              "ResourceType": "SUBNET"
            },
            "tags_all": {
              "Environment": "uat",
              "Name": "uat-demo-eks-cluster-public-subnet-1b",
              "Owner": "Shubho Shaha",
              "Project": "demo-eks-cluster",
              "ResourceType": "SUBNET"
            },
            "vpc_id": "vpc-0ba274f5229f1b39b"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:354285753755:subnet/subnet-094946741c2c079a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.145.2.0/24",
            "id": "subnet-094946741c2c079a9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "354285753755",
            "tags": {
              "Environment": "uat",
              "Name": "uat-demo-eks-cluster-public-subnet-1c",
              "Owner": "Shubho Shaha",
              "Project": "demo-eks-cluster",
              "ResourceType": "SUBNET"
            },
            "tags_all": {
              "Environment": "uat",
              "Name": "uat-demo-eks-cluster-public-subnet-1c",
              "Owner": "Shubho Shaha",
              "Project": "demo-eks-cluster",
              "ResourceType": "SUBNET"
            },
            "vpc_id": "vpc-0ba274f5229f1b39b"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:354285753755:vpc/vpc-0ba274f5229f1b39b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.145.0.0/20",
            "default_network_acl_id": "acl-09f29c9181f38ec90",
            "default_route_table_id": "rtb-05d58707682bce7f7",
            "default_security_group_id": "sg-0f5bac378110403d3",
            "dhcp_options_id": "dopt-90912af7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ba274f5229f1b39b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05d58707682bce7f7",
            "owner_id": "354285753755",
            "tags": {
              "Environment": "uat",
              "Name": "uat-demo-eks-cluster-vpc",
              "Owner": "Shubho Shaha",
              "Project": "demo-eks-cluster",
              "ResourceType": "VPC"
            },
            "tags_all": {
              "Environment": "uat",
              "Name": "uat-demo-eks-cluster-vpc",
              "Owner": "Shubho Shaha",
              "Project": "demo-eks-cluster",
              "ResourceType": "VPC"
            }
          }
        }
      ]
    }
  ]
}